--- a/android/Musaeda/app/src/main/res/layout/activity_contacts_picker.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_contacts_picker.xml
@@ -5,7 +5,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
-  tools:context="com.musaeda.PickActivity">
+  tools:context=".presentation.view.contactpicker.ContactsPickerActivity">
 
     <android.support.v7.widget.RecyclerView
       android:id="@+id/my_recycler_view"
