--- a/android/Musaeda/app/src/main/res/layout/activity_main.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,21 @@
     android:orientation="vertical"
     tools:context="com.musaeda.presentation.view.home.MainActivity">
 
+  <android.support.v7.widget.Toolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="?attr/colorPrimary"
+      android:minHeight="?android:attr/actionBarSize">
 
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="مساعدة"
+          android:textColor="#FFFFFF"
+          android:textSize="20sp"
+          />
+
+  </android.support.v7.widget.Toolbar>
 
 </LinearLayout>
