--- a/android/Musaeda/app/src/main/res/layout/activity_contacts_picker.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_contacts_picker.xml
@@ -8,7 +8,7 @@
   tools:context=".presentation.view.contactpicker.ContactsPickerActivity">
 
     <android.support.v7.widget.RecyclerView
-      android:id="@+id/my_recycler_view"
+      android:id="@+id/contacts_picker_list"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scrollbars="vertical"/>
