--- a/android/Musaeda/app/src/main/res/layout/row_contacts_picker.xml
+++ b/android/Musaeda/app/src/main/res/layout/row_contacts_picker.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:orientation="horizontal">
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:layout_margin="16dp"
+  android:minHeight="?android:attr/listPreferredItemHeight"
+  android:orientation="horizontal">
 
-  <ImageView
+    <ImageView
+      android:id="@+id/contact_image"
       android:layout_width="54dp"
       android:layout_height="54dp"
       android:layout_gravity="center"
       android:layout_marginRight="16dp"
       android:scaleType="centerCrop"
-      android:src="@mipmap/ic_launcher"/>
+      />
 
-  <TextView
+    <TextView
+      android:id="@+id/contact_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
