Triangle Buttons UI

--- a/android/Musaeda/app/src/main/res/layout/activity_smssending.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_smssending.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,25 +7,42 @@
     android:orientation="vertical"
     tools:context="com.musaeda.SMSSendingActivity">
 
-  <Button
-      android:id="@+id/btn_1"
+  <LinearLayout
+      android:id="@+id/linear_layout1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="HELP ME"
-      />
+      android:orientation="horizontal"
+      android:layout_centerInParent="true"
+      android:gravity="center"
+      android:padding="50dp"
+      >
 
-  <Button
-      android:id="@+id/btn_2"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="I AM SAFE"
-      />
+    <Button
+        android:id="@+id/btn_1"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/triangle_shape"
+        android:text="HELP ME"
+        />
+
+    <Button
+        android:id="@+id/btn_2"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/triangle_shape"
+        android:text="I AM SAFE"
+        android:rotation="180"
+        />
+  </LinearLayout>
 
   <Button
       android:id="@+id/btn_3"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:background="@drawable/triangle_shape"
       android:text="CALL ME"
+      android:layout_centerHorizontal="true"
+      android:layout_below="@id/linear_layout1"
       />
 
-</LinearLayout>
+</RelativeLayout>
