Add home activity

--- a/android/Musaeda/app/src/main/res/layout/activity_contacts_picker.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_contacts_picker.xml
@@ -1,35 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".presentation.view.contactpicker.ContactsPickerActivity">
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical"
+  tools:context=".presentation.view.contactpicker.ContactsPickerActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?android:attr/actionBarSize"
-        >
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="?attr/colorPrimary"
+      android:minHeight="?android:attr/actionBarSize"
+      >
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="مساعدة"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            />
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="right"
+          android:paddingRight="16dp"
+          android:text="مساعدة"
+          android:textColor="#FFFFFF"
+          android:textSize="28sp"
+          />
 
     </android.support.v7.widget.Toolbar>
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Select your network"
+      android:textSize="24sp"
+      android:padding="16dp"
+      android:fontFamily="sans-serif-light"/>
 
     <android.support.v7.widget.RecyclerView
       android:id="@+id/contacts_picker_list"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"
       android:scrollbars="vertical"/>
 
+    <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@color/colorPrimaryDark">
+        <Button
+          android:layout_width="match_parent"
+          android:layout_height="58dp"
+          android:id="@+id/add_contact_button"
+          android:background="?android:attr/selectableItemBackground"
+          android:text="ADD"
+          android:textColor="@android:color/white"
+          android:textSize="18sp"/>
+    </FrameLayout>
 </LinearLayout>
