Add bottom sheet

--- a/android/Musaeda/app/src/main/res/layout/activity_smssending.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_smssending.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.musaeda.SMSSendingActivity">
+    tools:context="com.musaeda.ComposeMessageActivity">
 
   <LinearLayout
       android:id="@+id/linear_layout1"
