--- a/android/Musaeda/app/src/main/res/layout/activity_main.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical"
-  tools:context=".presentation.view.contactpicker.ContactsPickerActivity">
+  android:layout_height="match_parent">
+    <LinearLayout
 
-    <android.support.v7.widget.Toolbar
-      android:id="@+id/toolbar"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="?attr/colorPrimary"
-      android:minHeight="?android:attr/actionBarSize">
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      tools:context=".presentation.view.contactpicker.ContactsPickerActivity">
+
+        <android.support.v7.widget.Toolbar
+          android:id="@+id/toolbar"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="?attr/colorPrimary"
+          android:minHeight="?android:attr/actionBarSize">
+
+            <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="right"
+              android:paddingRight="16dp"
+              android:text="مساعدة"
+              android:textColor="#FFFFFF"
+              android:textSize="28sp"/>
+
+        </android.support.v7.widget.Toolbar>
 
         <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:gravity="right"
-          android:paddingRight="16dp"
-          android:text="مساعدة"
-          android:textColor="#FFFFFF"
-          android:textSize="28sp"/>
+          android:fontFamily="sans-serif-light"
+          android:padding="16dp"
+          android:text="Your network"
+          android:textSize="24sp"/>
 
-    </android.support.v7.widget.Toolbar>
-
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:fontFamily="sans-serif-light"
-      android:padding="16dp"
-      android:text="Your network"
-      android:textSize="24sp"/>
-
-    <android.support.v7.widget.RecyclerView
-      android:id="@+id/my_contacts_list"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1"
-      android:scrollbars="vertical"/>
-
-    <FrameLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="@color/colorPrimaryDark">
-        <Button
-          android:id="@+id/add_contact_button"
+        <android.support.v7.widget.RecyclerView
+          android:id="@+id/my_contacts_list"
           android:layout_width="match_parent"
-          android:layout_height="58dp"
-          android:background="?android:attr/selectableItemBackground"
-          android:text="BROADCAST"
-          android:textColor="@android:color/white"
-          android:textSize="18sp"/>
-    </FrameLayout>
-</LinearLayout>
+          android:layout_height="0dp"
+          android:layout_weight="1"
+          android:scrollbars="vertical"/>
+
+        <FrameLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@color/colorPrimaryDark">
+            <Button
+              android:id="@+id/button_1"
+              android:layout_width="match_parent"
+              android:layout_height="58dp"
+              android:background="?android:attr/selectableItemBackground"
+              android:text="BROADCAST"
+              android:textColor="@android:color/white"
+              android:textSize="18sp"/>
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <android.support.v4.widget.NestedScrollView
+      android:id="@+id/bottom_sheet1"
+      android:layout_width="match_parent"
+      android:layout_height="250dp"
+      android:background="@android:color/holo_blue_bright"
+      android:clipToPadding="true"
+      app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical">
+
+            <TextView
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="16dp"
+              android:text="Test"
+              android:textSize="16sp"/>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
