--- a/android/Musaeda/app/src/main/res/layout/activity_main.xml
+++ b/android/Musaeda/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
           android:layout_height="wrap_content"
           android:background="@color/colorPrimaryDark">
             <Button
-              android:id="@+id/button_1"
+              android:id="@+id/broadcast_button"
               android:layout_width="match_parent"
               android:layout_height="58dp"
               android:background="?android:attr/selectableItemBackground"
@@ -62,25 +62,14 @@
     </LinearLayout>
 
     <android.support.v4.widget.NestedScrollView
-      android:id="@+id/bottom_sheet1"
+      android:id="@+id/bottom_sheet"
       android:layout_width="match_parent"
       android:layout_height="250dp"
-      android:background="@android:color/holo_blue_bright"
+      android:background="@android:color/white"
       android:clipToPadding="true"
       app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-        <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical">
-
-            <TextView
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="16dp"
-              android:text="Test"
-              android:textSize="16sp"/>
-        </LinearLayout>
+        <include layout="@layout/bottom_sheet_layout"/>
 
     </android.support.v4.widget.NestedScrollView>
 
