--- a/android/Musaeda/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/android/Musaeda/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -1,59 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_gravity="center"
-  android:weightSum="3">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:weightSum="3">
 
-    <LinearLayout
+  <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:gravity="center">
-        <Button
-          android:layout_width="112dp"
-          android:layout_height="112dp"
-          android:layout_margin="8dp"
-          android:background="@drawable/help_shape"
-          android:fontFamily="sans-serif"
-          android:scaleType="fitCenter"
-          android:text="HELP"
-          android:textColor="@android:color/white"
-          android:textSize="22sp"/>
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_1"
+        android:layout_width="112dp"
+        android:layout_height="112dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/help_shape"
+        android:fontFamily="sans-serif"
+        android:scaleType="fitCenter"
+        android:text="HELP"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"/>
+  </LinearLayout>
 
-    <LinearLayout
+  <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:gravity="center">
-        <Button
-          android:layout_width="112dp"
-          android:layout_height="112dp"
-          android:layout_margin="8dp"
-          android:background="@drawable/call_shape"
-          android:fontFamily="sans-serif"
-          android:scaleType="fitCenter"
-          android:text="CALL"
-          android:textColor="@android:color/white"
-          android:textSize="22sp"/>
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_2"
+        android:layout_width="112dp"
+        android:layout_height="112dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/call_shape"
+        android:fontFamily="sans-serif"
+        android:scaleType="fitCenter"
+        android:text="CALL"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"/>
+  </LinearLayout>
 
-    <LinearLayout
+  <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:gravity="center">
-        <Button
-          android:layout_width="112dp"
-          android:layout_height="112dp"
-          android:layout_margin="8dp"
-          android:background="@drawable/safe_shape"
-          android:fontFamily="sans-serif"
-          android:scaleType="fitCenter"
-          android:text="SAFE"
-          android:textColor="@android:color/white"
-          android:textSize="22sp"
-          />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_3"
+        android:layout_width="112dp"
+        android:layout_height="112dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/safe_shape"
+        android:fontFamily="sans-serif"
+        android:scaleType="fitCenter"
+        android:text="SAFE"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"
+        />
+  </LinearLayout>
 </LinearLayout>
